--- a/unidad3.html
+++ b/unidad3.html
@@ -4,22 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
-<body> 
-    <h1>hola, este es un nuevo cambio</h1>
-    <section>       
-        <form action="#">
-                <label class="margin">Usuario:</label> 
-                <input type="email" name="username" id="username" class="input">
-            <br>            
-                <label class="margin">Clave:</label> 
-                <input type="password" name="password" id="password"  class="input input-password" required>
-            <br>
-            
-            <input type="submit" value="Ingresar" id="submit" class=" submit">
-        </form>
-    </section>
-    <script src="unidad3.js"></script>
+<body class="bg-light">
+    <form class="px-3" style="max-width: 1000px; margin: 15px auto">
+    <div class="row">
+        <div class="mb-3 col-6">
+            <label for="name" class="form-label">Nombre de pila</label>
+            <input type="text" class="form-control" id="name">
+        </div>
+        <div class="mb-3 col-6">
+            <label for="lastname" class="form-label">Apellido</label>
+            <input type="text" class="form-control" id="name">
+        </div>
+    </div>
+    <div class="row">
+        <label for="user" class="form-label col-12">Nombre de usuario</label>
+        <div class="input-group mb-3 col-12">
+        <span class="input-group-text" id="basic-addon1">@</span>
+        <input type="text" class="form-control" id="user" placeholder="Nombre de usuario">
+        </div>
+    </div>
+    <div class="row">
+        <div class="mb-3 col-12">
+            <label for="email" class="form-label">Correo electrónico</label>
+            <span class="text-muted">(opcional)</span>
+            <input type="email" class="form-control" id="email" placeholder="you@example.com">
+        </div>
+    </div>
+    <div class="row">
+        <div class="mb-3" col-12>
+            <label for="dir1" class="form-label">Habla a</label>
+            <input type="text" class="form-control" id="dir1" placeholder="1234 Main st">
+        </div>
+    </div>
+    <div class="row">
+        <div class="mb-3 col-12">
+            <label for="dir2" class="form-label">Dirección 2
+            <span class="text-muted">(opcional)</span>
+            </label>
+            <input type="text" class="form-control" id="dir2" placeholder="Apartamento o suite">
+        </div>
+    </div>
+    <div class="row">
+        <div class="mb-3 col-5">
+            <label for="country" class="form-label">País</label>
+            <select class="form-control" id="country">
+                <option selected disabled>Escoger</option>
+                <option>Argentina</option>
+                <option>bolivia</option>
+                <option>Paraguay</option>
+                <option>Uruguay</option>
+                <option>Chile</option>
+            </select>
+        </div>
+        <div class="mb-3 col-4">
+            <label for="state" class="form-label">Estado</label>
+            <select class="form-control" id="state">
+                <option selected disabled>Escoger</option>
+                <option>Capital Federal</option>
+                <option>Buenos Aires</option>
+                <option>Chubut</option>
+            </select>
+        </div>
+        <div class="mb-4 col-3">
+            <label for="cp" class="form-label">Codigo Postal</label>
+            <input type="text" class="form-control" id="cp">
+        </div>
+    <hr>
+        <div class="mb-1 form-check">
+            <input type="checkbox" class="form-check-input" id="fc">
+            <label class="form-check-label" for="fc">La dirección de envío es la misma que mi dirección de facturación</label>
+         </div>
+        <div class="mb-1 form-check">
+            <input type="checkbox" class="form-check-input" id="remember">
+            <label class="form-check-label" for="remember">Guarde esta información para la próxima vez</label>
+        </div>
+    <hr>
+</form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
